--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,7 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css",
-              "node_modules/sweetalert2/src/sweetalert2.scss"
+              "src/styles.css"
             ],
             "scripts": []
           },
