--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.3.0",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.12",
     "tslib": "^2.6.1",
